# juicepick-supabase

./: .gitignore  README.md
crawler/: Dockerfile  docker-compose.yml  pyproject.toml
crawler/app/: crawler.py  settings.py  supabase_db.py  tasks.py
supabase/: config.toml
supabase/functions/crawl-thevape-shop/: index.ts
supabase/migrations/: 20250625070519_liquid_product.sql  20250701073032_crawl.sql  20250701073102_product_review.sql  20250904065746_user_profile.sql
